ROS2_Foxy/log/build_2024-11-02_03-34-56/fair_drip/stderr.log
  File "/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip/Ros2_Listener_Robot.py", line 187
    print(cup['order'])
    ^
SyntaxError: invalid syntax

